added functionality for working with notifications

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100&display=swap');
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(5px);
+  background-color: rgb(88,90,89);
+  overflow: hidden;
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  padding: 5% 70px 5% 20px;
+  box-sizing: border-box;
+}
+
+.container-title {
+  display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid rgb(199,200,200);
+  color: rgb(244,245,244);
+}
+
+.container-title_text h1{
+  border: 6px solid rgb(32,155,252);
+
+}
+
+.container-title_button button{
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.container-notifications {
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  gap: 40px;
+  height: 80%;
+}
+
+.container-notifications_img {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 80%;
+  width: 100%;
+  color: rgb(238,238,238);
 }
 
-.App-link {
-  color: #61dafb;
+.container-notifications_img img {
+  width: 70px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.container-notifications_item {
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  word-wrap: break-word;
+}
+
+.container-footer {
+  height: 10%;
+}
+
+.container-footer_button {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  /* height: 70%; */
+}
+
+@media (min-width: 1200px) {
+  .container-notifications {
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
